name:                SIUnits
version:             0.1.1.0
synopsis:            A lightweight library to handle units of measure on type-level
description:
license:             BSD3
license-file:        LICENSE
author:              Yurii Batrak
maintainer:
-- copyright:
category:            Math
build-type:          Simple
--extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Numeric.Units.SI
                     , Numeric.Units.SI.Base
                     , Numeric.Units.SI.Derived
  other-modules:       Numeric.Units.SI.Internal.Numerals
                     , Numeric.Units.SI.Internal.Ternary
                     , Numeric.Units.SI.Internal.Boolean
                     , Numeric.Units.SI.Tags.Multiply.Prefixes
  ghc-options:         -Wall -O2
  other-extensions:    DataKinds
                     , DeriveGeneric
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , KindSignatures
                     , MultiParamTypeClasses
                     , NoImplicitPrelude
                     , PolyKinds
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , UndecidableInstances

  build-depends:       base >=4.9 && <4.11
                     , deepseq >= 1.3
                     , template-haskell >= 2.11
                     , singletons >= 2.2

  hs-source-dirs:      src

  default-language:    Haskell2010

test-suite test-compile
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             TryCompile.hs
  build-depends:       base
                     , ghc-paths >= 0.1 && < 0.2
                     , hspec >= 2.4
                     , directory >= 1.3
                     , filepath >= 1.4
  default-language:    Haskell2010
  ghc-options:         -package ghc -Wall -O2

test-suite test-runtime
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             TryRun.hs
  build-depends:       base
                     , hspec >= 2.4
                     , SIUnits
  default-language:    Haskell2010
  ghc-options:         -package ghc -Wall -O2
